<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UMP Doctor</string>
    <string name="balance">余额</string>
    <string name="amount_income">累计收入(元)</string>
    <string name="amount_withdrawal">累计提现(元)</string>
    <string name="myIncome">我的收入</string>
    <string name="discount_record">提现记录</string>
    <string name="sun_title">共计:</string>
    <string name="sum_title">共计:</string>
    <string name="channel_title">提现渠道:</string>
    <string name="order_title">交易单号:</string>
    <string name="order">订单号:</string>
    <string name="shift_time">调班时间:</string>
    <string name="application_time_title">申请时间:</string>
    <string name="completed">已完成</string>
    <string name="abnormal_interruption">异常中断</string>
    <string name="inquiryNumberTile">问诊编号:</string>
    <string name="all">全部</string>
    <string name="to_be_evaluated">待评价</string>
    <string name="evaluated">已评价</string>
    <string name="membership_evaluation">会员评价:</string>
    <string name="doctor_evaluation">医生评价:</string>
    <string name="btn_evaluate_title" translatable="false">去评价</string>
    <string name="icon_title">头像</string>
    <string name="name_title">姓名</string>
    <string name="sex_title">性别</string>
    <string name="birthday_title">出生日期</string>
    <string name="birthday_title1">出生日期:</string>
    <string name="age_title">年龄</string>
    <string name="age_title1">年龄:</string>
    <string name="origin_title">籍贯</string>
    <string name="addres_title">联系地址</string>
    <string name="departments_title">科室</string>
    <string name="years_title">从业年限</string>
    <string name="titles_title">职称</string>
    <string name="department_telephone_title">科室电话</string>
    <string name="emergency_contact_title">紧急联系人</string>
    <string name="emergency_contact_phone_title">紧急联系人电话</string>
    <string name="attribute_title">属性</string>
    <string name="personal_profile">个人简介</string>
    <string name="idCard_number_title">身份证号码</string>
    <string name="certificate_practice_title">执业证书</string>
    <string name="certificate_practice_title1">请上传医生执业证书</string>
    <string name="certificatePractice_title">执业证书号码:</string>
    <string name="certificate_professional_title">职称证书</string>
    <string name="certificateProfessional_title">证书编号:</string>
    <string name="qualification_title">资格证书</string>
    <string name="qualification_numbertitle">证书编号:</string>
    <string name="other_certificates_title">其他证书</string>
    <string name="myMoney">我的零钱</string>
    <string name="withdrawal">提现</string>
    <string name="methodOfWithdrawal">提现方式</string>
    <string name="wexi">微信</string>
    <string name="alipay">支付宝</string>
    <string name="unionpay">银联</string>
    <string name="cash_withdrawal">提现金额</string>
    <string name="cashwithdrawal">提现</string>
    <string name="all_withdrawal">全部提现</string>
    <string name="in_amount">请输入金额</string>
    <string name="cash_out">提现</string>
    <string name="bank_title">招商银行</string>
    <string name="bank_number">尾号3456的储蓄卡</string>
    <string name="crdholder">持卡人</string>
    <string name="card_number_title">卡号</string>
    <string name="opening_bank_title">开户行</string>
    <string name="phone_title">手机号</string>
    <string name="confirm">确认</string>
    <string name="shift">申请调班</string>
    <string name="adjustmentTimeTitle">调整时间</string>
    <string name="reason_title">申请理由</string>
    <string name="submit">提交</string>
    <string name="input_name">请输入姓名</string>
    <string name="male">男</string>
    <string name="woman">女</string>
    <string name="permaResi_title">常住地</string>
    <string name="input_address">请输入联系地址</string>
    <string name="hospital_title">医院</string>
    <string name="input_hospital_title">请输入医院名称</string>
    <string name="selected_filling">选填</string>
    <string name="mandarin">普通话</string>
    <string name="Cantonese">粤语</string>
    <string name="fullJob_rb">全职</string>
    <string name="partJob_rb">兼职</string>
    <string name="next">下一步</string>
    <string name="language_title">语言服务</string>
    <string name="set1_title">个人简介</string>
    <string name="set2_title">身份认证</string>
    <string name="set3_title">资料上传</string>
    <string name="input_certificateProfessional_title">请输入证书编号</string>
    <string name="doctorstitle_title">请上传医生职称证书</string>
    <string name="input_other_title">请上传其他证书</string>
    <string name="qualification1_title">请上传资格证书</string>
    <string name="auth">申请认证</string>
    <string name="idCare_tilte">请上传身份证正，反面照片</string>
    <string name="uplod_usericon">请上传头像</string>
    <string name="modify_login">修改登录密码</string>
    <string name="modify_pay">修改支付密码</string>
    <string name="oldPwd">请输入原密码</string>
    <string name="newPwd">请输入新登陆密码</string>
    <string name="confirmPwd">请确认密码</string>
    <string name="confirmNewPayPwd">请确认新支付密码</string>
    <string name="modifyLogin_pwd">修改登录密码</string>
    <string name="oldPayPwd">请输入原支付密码</string>
    <string name="newPayPwd">请输入新的支付密码</string>
    <string name="new_pwd_tips">请输入新密码(6位)</string>
    <string name="new_pwd_tow_tips">请再次输入新密码(6位)</string>
    <string name="modify_pay_pwd">修改支付密码</string>
    <string name="modify_pwd">修改密码</string>
    <string name="my">我的</string>
    <string name="input_new_pwd_tips">请输入新密码(6-14位)</string>
    <string name="input_new_pwd_tow_tips">请再次输入新密码(6-14位)</string>
    <string name="customer_service">客服电话</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="current_language">当前语言:</string>
    <string name="tradi_chinese">繁体中文</string>
    <string name="chinese">简体中文</string>
    <string name="save">保存</string>
    <string name="help_center">帮助中心</string>
    <string name="scheduling_today">排班时长:</string>
    <string name="tv_online_time">今日在线:</string>
    <string name="marital_status">婚姻状况:</string>
    <string name="diagnosis_no">问诊单号:</string>
    <string name="diagnosis_id">病\t\t历\t号:</string>
    <string name="section_office_name">科\t\t\t\t\t室:</string>
    <string name="doctor_name">医生姓名:</string>
    <string name="diagnosis_start_time">就诊时间:</string>
    <string name="main_appeal">主\t\t\t诉:</string>
    <string name="current_medical_historyl">现病史:</string>
    <string name="family_history">家庭史:</string>
    <string name="allergies">过敏史:</string>
    <string name="preliminary_diagnosis">初步诊断:</string>
    <string name="diagnosis_suggest">诊疗建议:</string>
    <string name="prescription">处方</string>
    <string name="prescription_tips">*处方有效期%1$2s天</string>
    <string name="price">单价</string>
    <string name="specification">规格:</string>
    <string name="unit">单位:</string>
    <string name="total">合计:</string>
    <string name="usage_method">用法:</string>
    <string name="frequency">用药频次:</string>
    <string name="dosage">(次)剂量:</string>
    <string name="unitTitle">(次)单位:</string>
    <string name="days_taken">天数:</string>
    <string name="descriptiont">处方说明:</string>
    <string name="report_details">报告详情</string>
    <string name="outpatient_appointment">门诊预约</string>
    <string name="callPhone">400-680-8069</string>
    <string name="general_practice_training">全科培训</string>
    <string name="str_file1">image</string>
    <string name="str_file2">word</string>
    <string name="str_file3">xls</string>
    <string name="str_file4">ppt</string>
    <string name="str_file5">pdf</string>
    <string name="register_title">立即注册</string>
    <string name="login_fail">登录失败</string>
    <string name="rejectReasontitle">驳回原因:</string>
    <string name="hk">香港诊所</string>
    <string name="dalu">大陆诊所</string>
    <string name="typeTitle">调班类型</string>
    <string name="title_fuwupingjia">你对本次服务还满意吗?</string>
    <string name="emergencycontact_notempty">紧急联系人不能为空</string>
    <string name="tianxie_renzheng">填写认证信息</string>
    <string name="name_is_not_empty">姓名不能为空</string>
    <string name="birthdays_not_empty">生日不能为空</string>
    <string name="age_not_empty">年龄不能为空</string>
    <string name="origin_not_empty">籍贯不能为空</string>
    <string name="residencenot_empty">常住地不能为空</string>
    <string name="address_not_empty">地址不能为空</string>
    <string name="hospita_not_emptyl">医院不能为空</string>
    <string name="choose_language">请选择语言</string>
    <string name="select_attributes">请选择属性</string>
    <string name="departments_not_mpty">科室不能为空</string>
    <string name="years_is_not_empty">从业年限不能为空</string>
    <string name="title_not_empty">职称不能为空</string>
    <string name="authentication">实名认证</string>
    <string name="record_of_inquiry">问诊记录</string>
    <string name="load_fail">加载失败</string>
    <string name="full_evaluation">全部评价</string>
    <string name="cardholder_not_empty">持卡人不能为空</string>
    <string name="backcard_not_empty">银行卡不能为空</string>
    <string name="bankcard_format_incorrect">银行卡格式不正确</string>
    <string name="openingBank_not_empty">开户行不能为空</string>
    <string name="phone_format_Incorrect">手机号格式不正确</string>
    <string name="addedSuccessfully">添加成功</string>
    <string name="phone_not_empty">手机号不能为空</string>
    <string name="failure_to_add">添加失败</string>
    <string name="discountrecord">提现记录</string>
    <string name="wallet">钱包</string>
    <string name="smallchange">零钱</string>
    <string name="queryfailure">查询失败</string>
    <string name="setting_language">设置语言</string>
    <string name="binding_phone">绑定手机号</string>
    <string name="getauthentication_code">获取验证码</string>
    <string name="surplus">剩余</string>
    <string name="second">秒</string>
    <string name="China">中国</string>
    <string name="hong_kong">香港</string>
    <string name="national_code">国家编码</string>
    <string name="forget_password">找回密码</string>
    <string name="select_country_code">请选择国家编码</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="statecode_not_empty">国家码不能为空</string>
    <string name="oldpwd_not_empty">原密码不能为空</string>
    <string name="new_pwd_not_empty">新密码不能为空</string>
    <string name="confirmation_pwd_not_empty">确认密码不能为空</string>
    <string name="twopassword_inconsistencies">两次密码不一致</string>
    <string name="successful_revision">修改成功</string>
    <string name="modify_payment_password">修改支付密码</string>
    <string name="verification_code_not_empty">验证码不能为空</string>
    <string name="payment_pwd_empty">支付密码不能为空</string>
    <string name="successful_setup">设置成功！</string>
    <string name="cerification_codesuccess">短信验证码获取成功！</string>
    <string name="pwd_not_empty">密码不能为空</string>
    <string name="message">消息</string>
    <string name="consultation_room">线上诊室</string>
    <string name="apply_scheduling">申请调班</string>
    <string name="please_choose_typesetting_shift">请选择排版班次</string>
    <string name="please_enter_the_reason">请输入原因</string>
    <string name="no_adjustableshifts">没有可调班次</string>
    <string name="scheduling_application_record">调班记录</string>
    <string name="work_schedule_rule">排班计划</string>
    <string name="shiftrecord">调班记录</string>
    <string name="please_select_the_date_typesetting">请选择需要排版的日期</string>
    <string name="personal_information">个人信息</string>
    <string name="edit">编辑</string>
    <string name="editing_personal_information">编辑个人信息</string>
    <string name="waiting_answer">正在连接等待对方接听...</string>
    <string name="press_the_exit_procedure_again">再按一次退出程序</string>
    <string name="clinic">诊所</string>
    <string name="home">首页</string>
    <string name="find">发现</string>
    <string name="me">我的</string>
    <string name="go_to_doctor_office">去出诊</string>
    <string name="evaluation_success">评价成功!</string>
    <string name="login_out">退出登录</string>
    <string name="complete">完成</string>
    <string name="department">科室</string>
    <string name="introduction_not_empty">个人介绍不能为空</string>
    <string name="cancel">取消</string>
    <string name="immediate_consultation">立即问诊</string>
    <string name="tips_msg">提示</string>
    <string name="find_new_versions">发现新版本</string>
    <string name="upgrade_now">立即升级</string>
    <string name="ignore">忽略</string>
</resources>