<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.evaluation.MyEvaluationActivity">

    <include layout="@layout/common_top2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/btn_color2"
            app:tabIndicatorColor="@color/btn_color1"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="2dp"
            app:tabSelectedTextColor="@color/btn_color1"
            app:tabTextAppearance="@android:style/TextAppearance.Holo.Small"
            app:tabTextColor="@color/textColor7">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_be_evaluated" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evaluated" />
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <it.swiftelink.com.common.widget.stateview.StateView
                android:id="@+id/stateView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>


    </LinearLayout>


</LinearLayout>