<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_center_dialog"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/tips_msg"
            android:textColor="@color/textColor7"
            android:textSize="@dimen/font_18" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_30"
            android:text="派单成功"
            android:textColor="@color/textColor7"
            android:textSize="@dimen/font_16" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|right"
            android:visibility="gone">

            <Button
                android:id="@+id/cancel"
                android:layout_width="@dimen/len_88"
                android:layout_height="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_25"
                android:background="@drawable/btn_blue1"
                android:text="@string/cancel"
                android:textColor="@color/bgColor10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/submit"
                android:layout_width="@dimen/len_88"
                android:layout_height="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginBottom="@dimen/dp_25"
                android:background="@drawable/btn_blue1"
                android:gravity="center"
                android:text="@string/immediate_consultation"
                android:textColor="@color/bgColor10" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
