<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@mipmap/bg_update"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_128">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/find_new_versions"
                android:textColor="@color/textColor0"
                android:textSize="@dimen/font_16" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_10">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/updlogTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1:修复已知                                              2:版本号V1.0.8 "
                android:textColor="@color/textColor6"
                android:textSize="@dimen/font_14" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10">

            <Button
                android:id="@+id/upgradeNowBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_39"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/btn_withdrawal"
                android:text="@string/upgrade_now"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/ignoreBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_39"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/btn_withdrawal"
                android:text="@string/ignore"
                android:textColor="@color/white"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>